Fix whitespace in code blocks with long lines
Fixes #2

--- a/assets/stylesheets/_alerts.less
+++ b/assets/stylesheets/_alerts.less
@@ -117,6 +117,12 @@
 		}
 	}
 	dd + dt { margin-top: 20px; }
+
+	pre.chroma {
+		code {
+			  white-space: pre;
+		}
+	}
 }
 
 .file-excerpt {
